re PR tree-optimization/66449 (ICE: in build2_stat, at tree.c:4376 with -O3)

PR tree-optimization/66449
	* tree-ssa-loop-niter.c (loop_exits_before_overflow): Use
	POINTER_PLUS_EXPR for pointers.

	gcc/testsuite
	PR tree-optimization/66449
	* gcc.dg/vect/pr66449.c: New test.

From-SVN: r224769